Migrated the Whole application without the Location widget, still needs some modifications

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider:
   sqflite: ^2.3.3+1
+  path: ^1.9.0
+  sqflite_common_ffi: ^2.3.3
+  google_maps_flutter: ^2.2.8
+  flutter_polyline_points: ^2.0.0
+  geolocator: ^11.0.0
 
 dev_dependencies:
   flutter_test:
